syntax = "proto3";

package model.messages.gradido;

import "BasicTypes.proto";

// need signature from group admin or 
// percent of group users another than the receiver
message TransactionCreation {
	ReceiverAmount receiverAmount = 1;
	sint32 ident_hash = 2;
	
}
